完善资讯活动详情，相册详情，体验课程详情，联系我们详情，并做部门优化

--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": false,
+		"useCompilerModule": true,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -85,6 +85,13 @@
 					"id": -1,
 					"name": "精品课程",
 					"pathName": "pages/course/course",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "学校相册",
+					"pathName": "pages/album/album",
 					"scene": null
 				}
 			]
