--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -92,6 +92,13 @@
 					"id": -1,
 					"name": "学校相册",
 					"pathName": "pages/album/album",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "联系我们",
+					"pathName": "pages/contact/contact",
 					"scene": null
 				}
 			]
