新增个人中心预定详情组件，预定详情页面（剩余一些数据细节未解决）

--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
     "pages/student/student",
     "pages/activity/activity",
     "pages/courseOrder/courseOrder",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/orderedCourse",
+    "pages/orderedCourse/orderedCourse"
   ],
   "permission": {
     "scope.userLocation": {
@@ -23,7 +25,7 @@
     "navigationBarBackgroundColor": "#2E8B57",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black",
-    "backgroundColor":"#faebd7"
+    "backgroundColor": "#faebd7"
   },
   "tabBar": {
     "color": "#999",
