--- a/project.config.json
+++ b/project.config.json
@@ -103,9 +103,17 @@
 					"scene": null
 				},
 				{
-					"id": -1,
+					"id": 6,
 					"name": "我的",
 					"pathName": "pages/mine/mine",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 7,
+					"name": "预约课程",
+					"pathName": "pages/orderedCourse/orderedCourse",
+					"query": "",
 					"scene": null
 				}
 			]
